# lancini

./: .gitignore  .gitmodules  README.md  REF.md  pyproject.toml
.github/workflows/: push.yaml
lancini/: __init__.py  cli.py  corpus.py  main.py  zaloma.py
misc/: zaloma.py
