[tool.poetry]
name = "lancini"
version = "0.1.0"
description = "Palindrome-related scripts in Python for the Spanish language"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
readme = "README.md"
repository = "https://github.com/aitorres/lancini"
keywords = [
    "python",
    "cli",
    "spanish",
    "español",
    "natural language",
    "palindromes"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/lancini/issues"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.4"
isort = "^5.12.0"
types-requests = "^2.31.0.2"

[tool.isort]
src_paths = ["lancini", "test"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length=90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
