[tool.poetry]
name = "lancini"
version = "0.1.0"
description = "Palindrome-related scripts in Python for the Spanish language"
authors = ["Andrés Ignacio Torres <dev@aitorres.com>"]
readme = "README.md"
repository = "https://github.com/aitorres/lancini"
keywords = [
    "python",
    "cli",
    "spanish",
    "español",
    "natural language",
    "palindromes"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/aitorres/lancini/issues"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"
black = "^23.12.1"
mypy = "^1.8.0"
pylint = "^3.0.3"
isort = "^5.13.2"

[tool.isort]
src_paths = ["lancini", "test"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length=90

[tool.poetry.scripts]
lancini = "lancini.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
